<resources>
    <string name="app_name">Clerk</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="no_data">There\'s no data yet!</string>

    <string name="preference">Preference</string>
    <string name="auto_scroll">Auto scroll</string>
    <string name="auto_scroll_summary">Auto scroll to latest log</string>
    <string name="instant_log">Instant Log</string>
    <string name="click_to_stop">Click to Stop</string>
    <string name="instant_log_summary">Show log screen when receive Log</string>
    <string name="about">About</string>
    <string name="github">View on GitHub</string>
    <string name="google_play">View on GooglePlay</string>
    <string name="version">Version</string>

    <string name="request_overlay_title">"Need DrawOverlays Permission"</string>
    <string name="request_overlay_message">""</string>

    <string name="max_new_log">99+</string>

</resources>
